# acad

./: .gitignore  CMakeLists.txt  README.md  application.qrc
app/: app.cpp  app.h  build.cpp  main.cpp  version.h
copyfiles/: config.json
docs/: User Guide.docx  license.txt
dxf/: dxf.h
examples/F3A_Example/: f3a.acad
examples/T28_Example/: t28.acad
hpgl/: hpgl.cpp  hpgl.h
installer/: cleaninstall.bat  createinstall.bat  norton360.txt
installer/config/: config.xml
neutralpoint/: neutralpoint.cpp  neutralpoint.h
octave/bezier/: curve_points.txt  investigate.m
tabs/: tabs.cpp  tabs.h
utils/: ascii.cpp  bezier.cpp  bezier.h  debug.cpp  debug.h  former.cpp  former.h  object_oo.cpp  object_oo.h
wing/: airfoil.cpp  airfoil.h  element.cpp  element.h  le_template.cpp  le_template.h  part.cpp  part.h  planform.cpp  planform.h  rib.cpp  rib.h  spar.cpp  spar.h  wing.cpp  wing.h
